FEAT: ControladorPrincipal comentado y corregido.